dotnet_macros/tests/ui/dotnet_class_unknown_key.stderr
error: #[dotnet_class]: unknown attribute key `extendz`; expected one of `extends`, `value_type`, `default_ctor`, `field_setters`, `implements`
 --> tests/ui/dotnet_class_unknown_key.rs:5:16
  |
5 | #[dotnet_class(extendz = "[System.Runtime]System.Object")]
  |                ^^^^^^^
